<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--TITULO-->
    <TextView
        android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/pagamento_orientacao"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--VALOR DA COMPRA-->
    <TextView
        android:id="@+id/pagamento_valor_da_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pagamento_valor_da_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamento_orientacao" />

    <!--PRECO-->
    <TextView
        android:id="@+id/pagamento_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/pagamento_valor_da_compra"
        app:layout_constraintTop_toBottomOf="@id/pagamento_valor_da_compra"
        tools:text="R$ 421,50" />

    <!--NUMERO DO CARTAO-->
    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:autofillHints="creditCardNumber"
        android:hint="@string/pagamento_numero_cartao_hint"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamento_preco_pacote"
        app:layout_constraintWidth_max="488dp" />

    <!--MES (MM)-->
    <EditText
        android:id="@+id/pagamento_mes_cartao"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:autofillHints="creditCardExpirationMonth"
        android:hint="@string/pagamento_mes_cartao_hint"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />

    <!--ANO (AA)-->
    <EditText
        android:id="@+id/pagamento_ano_cartao"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:autofillHints="creditCardExpirationYear"
        android:hint="@string/pagamento_ano_cartao_hint"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/pagamento_mes_cartao"
        app:layout_constraintTop_toTopOf="@id/pagamento_mes_cartao" />

    <!--CVC (CODIGO DE VERIFICACAO DO CARTAO)-->
    <EditText
        android:id="@+id/pagamento_cvc"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints="creditCardSecurityCode"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/pagamento_cvc_hint"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/pagamento_numero_cartao"
        app:layout_constraintTop_toTopOf="@id/pagamento_mes_cartao" />

    <!--NOME DO CARTAO-->
    <EditText
        android:id="@+id/pagamento_nome_cartao"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:digits="@string/mascara_nome_cartao"
        android:hint="@string/pagamento_nome_cartao_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/pagamento_cvc"
        app:layout_constraintStart_toStartOf="@id/pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_cvc"
        app:layout_constraintWidth_max="488dp" />

    <!--BOTÃO FINALIZAR COMPRA-->
    <android.widget.Button
        android:id="@+id/pagamento_botao_finaliza_compra"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/pagamento_botao_finaliza_compra"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/pagamento_nome_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_nome_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_nome_cartao"
        app:layout_constraintWidth_max="320dp"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>