<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lista_pacotes_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="VisualLintBounds">

    <ImageView
        android:id="@+id/lista_pacotes_banner_inicial"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/lista_pacotes_banner_inicial_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView android:id="@+id/lista_pacotes_tv_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/especiais"
        android:textColor="@color/white"
        android:textSize="@dimen/tamanho_txt_xxl"
        app:layout_constraintBottom_toBottomOf="@id/lista_pacotes_banner_inicial"
        app:layout_constraintEnd_toEndOf="@id/lista_pacotes_banner_inicial"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/lista_pacotes_banner_inicial"
        app:layout_constraintTop_toTopOf="@id/lista_pacotes_banner_inicial"
        app:layout_constraintVertical_bias="0.0" />

    <TextView android:id="@+id/lista_pacotes_tv_lugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pais"
        android:textColor="@color/white"
        android:textSize="@dimen/tamanho_txt_lg"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/lista_pacotes_banner_inicial"
        app:layout_constraintEnd_toEndOf="@id/lista_pacotes_tv_categoria"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/lista_pacotes_tv_categoria"
        app:layout_constraintTop_toBottomOf="@id/lista_pacotes_tv_categoria"
        app:layout_constraintVertical_bias="0.0" />

    <ListView android:id="@+id/lista_pacotes_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/lista_pacotes_description"
        android:divider="@null"
        android:dividerHeight="0dp"
        tools:listitem="@layout/item_pacote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lista_pacotes_banner_inicial" />

</androidx.constraintlayout.widget.ConstraintLayout>